client/src/styles/partials/_dark-mode.scss
@use 'colors' as *;
@use 'mixins' as *;

// Global Dark Mode Styles
[data-theme='dark'] {
    // Background and text colors
    background-color: $primary-darker-blue;
    color: $neutral-white;
  
    // Header styles
    .header {
      background-color: $primary-dark-navy-blue;
      color: $primary-very-light-blue;
    }

    .header__logo {
        filter: invert(100%) sepia(100%) saturate(0%) brightness(1000%);
    }

    .header__search-bar,
    .header__search-input--mobile,
    .header__search-bar--mobile,
    .header__search-input {
        background-color: $primary-darker-blue;
    }

    .header__search-input--mobile,
    .header__search-input {
        border-radius: .25rem;
    }

    a {
      color: $neutral-white;
      text-shadow: $shadow-primary;
    }

    .modal-contact__submit-text {
      color: $primary-dark-blue;
    }

    input,
    textarea {
      background-color: $primary-medium-blue;

      &:focus {
        background-color: $primary-dark-blue;
        color: $neutral-white;
      }
    }

    // Calendar Page
    .calendar-page {
      background-color: $primary-darker-blue;
    }

    tbody {
      background: $primary-dark-blue;
    }

    .calendar__search-bar {
      color: $neutral-white;
    }

    .calendar__overlay {
      background: $frosted-glass;
    }

    .modal-content {
      background: $primary-darker-blue;
    }

    .modal-input {
      color: $primary-dark-blue;
      background-color: $primary-very-light-blue;
    }

    // 404 Page
    .not-found__content-card {
      background: $primary-light-blue;
    }

    .not-found__intro {
      color: $neutral-white;
    }

    // Login Required
    .login-required__content-card {
      background: $primary-very-light-blue;
    }
    
    // Login Page
    .login {
      background-color: $primary-darker-blue;

      &__title {
        color: $neutral-white;
      }
    }

    // NextSearch
    .next-search {
      background: linear-gradient(135deg, rgba($primary-button-dark-blue, .75), rgba($base-darker-blue, 1));

      &__title {
        background: $dark-mode-royal-blue;
      }

      &__copy {
        background: $frosted-glass;
      }

      &__cal-icon,
      &__media-icon,
      &__share-icon,
      &__like-icon,
      &__dislike-icon {
        &:hover {
          color: $primary-button-blue;
        }

        &:active {
          background: $base-darker-blue;
          color: $neutral-white;
        }
      }

      &__cal-icon,
      &__media-icon,
      &__share-icon,
      &__like-icon,
      &__dislike-icon,
      &__search-icon,
      &__close-icon,
      &__title--results {
        color: $neutral-white;
      }

      &__results-section,
      &__icons-row,
      &__scroll-container-popular,
      &__scroll-container-results {
        background: $frosted-glass;
      }

      &__cast,
      &__title--popular {
        color: $primary-very-light-blue;
      }

      &__card {
        background: $primary-medium-blue;
        border-color: $frosted-glass;
      }

      &__card--popular {
        background: $primary-dark-blue;
      }

      &__tabs-container {
        background: $base-darker-blue;
      }
    }

    // Footer
    .footer {
      background: $primary-darker-blue-gradient;

      &__privacy-policy,
      &__tac {
        &:hover {
          box-shadow: none;
        }
      }
    }

    // Forgot Password Modal
    .modal-forgot-password__input {
      color: $neutral-white;
    }

    .modal-forgot-password__reset {
      color: $primary-dark-blue;
    }

    // Register Page 
    .register {
      background-color: $primary-darker-blue;

      &__hero {
        background-image: none;
      }

      &__account-available,
      &__guest-text {
        color: $primary-very-light-blue;
      }

      &__title,
      &__terms-txt {
        color: $neutral-white;
      }

      &__content-card {
        background-color: $dark-mode-royal-blue;
      }

      &__container {
        background: $primary-dark-blue;
      }
    }

    // T&C and Privacy Policy
    .terms,
    .privacy {
      background-color: $dark-mode-deep-blue;

      &__content-card {
        background-color: $primary-very-light-blue;
      }

      &__nextstream-link {
        color: $dark-mode-royal-blue;
        text-shadow: $shadow-primary;

        &:hover {
          color: $neutral-white;
        }
      }
    }

    // NextView Page 
    .nextview-page__title,
    .nextview-page__genre-icon,
    .nextview-page__streaming-copy,
    .nextview-page__cast-copy {
      color: $neutral-white;
    }
    
    // Profile     
    .profile-img {
      &::before {
        background: none;
      }
    }

    .profile {
      background: $primary-darker-blue;
    
      &__main {
        background: $primary-dark-blue;
      }

      &__title {
        color: $primary-pale-blue;
      }

      &__content-details,
      &__content-password,
      &__content-notifications,
      &__content-subscription-container,
      &__content-region,
      &__dropdown {
        background-color: $primary-button-dark-blue;
      }

      &__dropdown {
        color: $neutral-white;
      }
    }

    // Top Picks
    .recommendations-page {
      background: $primary-darker-blue;
      margin: 0;

      @include desktop {
        padding: 2rem 3.5rem;
      }

      &__copy {
        color: $neutral-white;
      }

      &__title {
        background: $primary-medium-blue;
        color: $neutral-white;
      }
    }

    .light-blob-container {
      background: $primary-darker-blue;
    }

    // Streamboard 
    .streamboard {
      background: $frosted-glass;

      &__title {
        background: $primary-darker-blue-gradient;
      }
    
      &__media-column--to_watch {
        background-color: $primary-medium-blue;
      }

      &__media-item {
        background-color: $primary-very-light-blue;
      }

      &__calendar-icon,
      &__trash-icon,
      &__media-type-icon {
        background-color: $primary-dark-blue;
        color: $neutral-white;

        &:hover{
          background-color: $neutral-white;
          color: $primary-button-blue;
        }

        &:active {
          color: $primary-dark-blue;
          background-color: $primary-very-light-blue;
        }
      }

      &__media-column--scheduled {
        background-color: $dark-mode-royal-blue;
      }

      &__media-column--watched {
        background-color: $dark-mode-deep-blue;
      }
    }

    // Faves 
    .faves-page__title,
    .faves-page__search-bar-container {
      background: $primary-darker-blue-gradient;
    }

    .faves-page__search-input {
      border-radius: 1.25rem;
      color: $neutral-white;
    }

    .faves-page__copy-container {
      background: $dark-mode-royal-blue;
    }

    .faves-page__filters-container {
      background: $frosted-glass;
    }

    // Recommendations 
    .top-picks-page__container {
      background: $dark-mode-deep-blue;
    }

    .top-picks-page__media-card {
      background: $frosted-glass;
    }

    .media-card__details {
      background: $primary-very-light-blue;
      border-radius: 0 0 .5rem .5rem;
    }

    .media-card__image {
      background: $primary-very-light-blue;
      border-radius: .5rem .5rem 0 0;
    }


    // Homepage 
    .hero {
      background: linear-gradient(180deg, $primary-medium-blue 0%, $dark-mode-royal-blue 50%, $base-darker-blue 100%);
      border-bottom: .1875rem solid $neutral-light-grey;

      &__title {
        color: $primary-very-light-blue;
      }

      &__subtitle {
        color: $neutral-white;
      }
    }

    .content {
      background-color: $base-darker-blue;

      &__new-releases-subtitle {
        color: $neutral-white;
      }

      &__new-releases {
        border-top: .1875rem solid $neutral-light-grey;
      }

      &__label-header-container,
      &__label-header-new-container {
        background: $primary-gradient-blue;
      }

      &__card-features__feature__icon-bg {
        background: $primary-medium-blue-gradient;
      }

      &__label-features, 
      &__label-header-new-releases{
        color: $neutral-white;
        text-shadow: $shadow-primary;
      }

      &__card-features__feature__label {
        background-color: $neutral-light-grey;
        border: .1875rem solid $primary-very-light-blue;
        color: $primary-medium-blue;
        text-shadow: $shadow-primary;
        box-shadow: $shadow-tertiary;
      }
    }
  
    // Button styles
    .btn {
      background-color: $primary-medium-blue;
      color: $neutral-white;
  
      &:hover {
        background-color: $primary-light-blue;
      }
    }
  
    // Card styles
    .card {
      background-color: $primary-dark-blue;
      color: $neutral-white;
      box-shadow: $shadow-secondary;
    }
  }

